# nurbs-wasm-simd

./: .gitignore  README.md  copy-wasm.js  package-lock.json  package.json
.github/workflows/: deploy.yml
nurbs_wasm/: Cargo.toml  README.md  build.sh
nurbs_wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.js  vitest.config.ts
web/nurbs_wasm/pkg/: nurbs_wasm.d.ts  nurbs_wasm.js  nurbs_wasm_bg.wasm  nurbs_wasm_bg.wasm.d.ts
web/src/: App.test.tsx  App.tsx  code.tsx  editor.tsx  globals.css  index.css  main.tsx  nurbs-wasm.d.ts  nurbs-wasm.test.ts
web/src/components/: InlineCode.tsx  Section.tsx
web/src/hooks/: useNurbsWasm.ts
web/src/test/: setup.ts
web/src/test/mocks/: App.tsx  nurbs_wasm.ts
