[package]
name = "nurbs_wasm"
version = "0.1.0"
edition = "2021"
description = "NURBS curve generator using WASM SIMD"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
nalgebra = "0.32.3"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element"
]

[profile.release]
opt-level = 3
lto = true
