[package]
name = "nurbs_wasm"
version = "0.1.0"
edition = "2021"
description = "NURBS curve generator using WASM SIMD"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
dlmalloc = ["dep:dlmalloc"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
console_error_panic_hook = { version = "0.1.7", optional = true }
dlmalloc = { version = "0.2.6", optional = true, features = ["global"] }

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Element",
]

[profile.release]
opt-level = 3
lto = true
